Fix z-index positioning on checkbox/select

--- a/assets/sass/components/form.scss
+++ b/assets/sass/components/form.scss
@@ -135,6 +135,7 @@
         top: 0;
         left: 0;
         position: relative;
+        z-index: 1;
         @include bp--m {
             font-size: 1.6rem;
             padding-left: 4.8rem;
@@ -200,7 +201,7 @@ select[data-ss-uuid] {
     display: block;
     position: relative;
     width: 100%;
-    z-index: 1;
+    z-index: 2;
 
     &,
     * {
